random fixes using slugify to fix links

--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,6 @@ page_gen:
     extension: 'html'
   - data: 'hjccc-glossary'
     template: 'terms'
-    name: 'url'
+    name: 'slug'
     dir: 'resources'
     extension: 'html'    
