more stuff, polish and moves based on Renae discussion
I should stop

--- a/_config.yml
+++ b/_config.yml
@@ -39,5 +39,5 @@ page_gen:
   - data: 'hjccc-glossary'
     template: 'terms'
     name: 'slug'
-    dir: 'resources'
+    dir: 'glossary'
     extension: 'html'    
