--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 
 # Site settings
 title: Historical Japanese Ceramic Comparative Collection
-tagline: "Historical Japanese ceramics from archaeological sites in the American West"
+tagline: "Japanese ceramics from archaeological sites in the American West"
 description: "The Historical Japanese Ceramic Comparative Collection (HJCCC) contains digital photographs and resources for identifying and describing Japanese ceramics manufactured during the Meiji and Taisho eras..."
 keywords: university of idaho, HJCCC, digital collections
 email: ewilliamson@uidaho.edu
