--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,11 @@ keywords: university of idaho, HJCCC, digital collections
 email: ewilliamson@uidaho.edu
 
 # url variables
-url: https://uidaholib.github.io
-# url: https://www.lib.uidaho.edu
-baseurl: /HJCCC_source
-# baseurl: /digital/hjccc
+#url: https://uidaholib.github.io
+url: https://www.lib.uidaho.edu
+#baseurl: /HJCCC_source
+baseurl: /digital/hjccc
+
 repo-url: https://digital.lib.uidaho.edu
 repo-collection-ids: HJCCC
 
