update and normalize data

--- a/_config.yml
+++ b/_config.yml
@@ -28,19 +28,19 @@ bstheme: # leave blank or comment out for plain bootstrap
 # Dev variables: 
 # choose metadata set, i.e. easily switch between full or dev version
 # be sure to also change page_gen data setting!
-metadata: hjccc-objects
+metadata: hjccc_objects
 
 # collection display variables 
 # see _data/metadata-fields.csv
 
 # page gen settings https://github.com/avillafiorita/jekyll-datapage_gen
 page_gen:
-  - data: 'hjccc-objects'
+  - data: 'hjccc_objects'
     template: 'items'
     name: 'object-id'
     dir: 'data'
     extension: 'html'
-  - data: 'hjccc-glossary'
+  - data: 'hjccc_glossary'
     template: 'terms'
     name: 'slug'
     dir: 'glossary'
